--- a/index.html
+++ b/index.html
@@ -24,31 +24,32 @@
               <a class="btn" href="#"><span class="dot"></span>BY NFTS</a>
             </button>
                 </ul>
-                <div class="icon">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
             </nav>
         </div>
+        <!-- nav bar end -->
         <div class="hero-section">
 
             <div class="hero-div">
                 <div class="left">
                     <h1>
-                        Discover <br> And <br>Collect<br>Rare Nfts
+                        Discover And Collect Rare Nfts
                     </h1>
                 </div>
                 <div class="right">
-                    <img class="images" src="images/Other 07.png" alt="" />
+                    <img class="images" src="images/Other 07.png" alt="Nft image" />
                 </div>
             </div>
             <div class="end-herosection">
-                <p>
-                    The most secure marketplace for buying<br /> and selling unique crypto assets.
-                </p>
-                <button class="btn1">BUY NFTS</button>
-                <button class="btn2">Sell NFTS</button>
+                <div class="p-content">
+                    <p>
+                        The most secure marketplace for buying and selling unique crypto assets.
+                    </p>
+                </div>
+                <div class="links">
+                    <a class="link1" href="btn1">Buy NFts</a>
+                    <a class="link2" href="btn2">Sell NFTs</a>
+                </div>
             </div>
-
         </div>
         <!-- hero-section end -->
         <div class="feature">
@@ -65,59 +66,57 @@
         </div>
         <!-- features section end -->
 
-        <div class="analytics">
-            <div class="hero-analytics">
-                <div class="left">
-                    <img src="images/Other 18.png" alt="">
-                </div>
-                <div class="right">
-                    <h3 class="text1">Analytics</h3>
-                    <h1 class="text2">Built-In Analytics<br>to track your nfts</h1>
-                    <p>use our built-in analytics dashboard to pull<br>valueable insights and monitor the value of your<br>Krypto portfolio over time</p>
-                    <button class="btn3">View our pricing</button>
-                </div>
+
+        <div class="hero-analytics">
+            <div class="left">
+                <img src="images/Other 18.png" alt="">
+            </div>
+            <div class="right">
+                <h3 class="text1">Analytics</h3>
+                <h1 class="text2">Built-In Analytics to track your nfts</h1>
+                <p class="p-analytics">use our built-in analytics dashboard to pull valueable insights and monitor the value of your Krypto portfolio over time</p>
+                <button class="btn3">View our pricing</button>
             </div>
         </div>
+
         <!-- analytics end -->
 
-        <div class="browse">
-            <div class="browse-hero">
-                <div class="left">
-                    <h3 class="text1">Get our app</h3>
-                    <h1 class="text2">Browse NFTs From<br>Your Samrtphone</h1>
-                    <p>use our built-in analytics dashboard to pull<br>valueable insights and monitor the value of your</br>Krypto portfolio over time</p>
-                    <button class="btn-3">View our pricing</button>
-                </div>
-                <div class="right">
-                    <img src="images/Other 17.png" alt="">
-                </div>
+
+        <div class="browse-hero">
+            <div class="left">
+                <h3 class="text1">Get our app</h3>
+                <h1 class="browse-text">Browse NFTs From Your Samrtphone</h1>
+                <p class="p-browse">use our built-in analytics dashboard to pull valueable insights and monitor the value of your Krypto portfolio over time</p>
+                <button class="btn3">View our pricing</button>
+            </div>
+            <div class="right">
+                <img src="images/Other 17.png" alt="">
             </div>
         </div>
+
         <!-- browse section end -->
         <div class="testmonials">
             <div class="testmonials-hero">
                 <div class="up">
                     <h3 class="text5">Testimonials</h3>
-                    <h1 class="text6">Read What Others<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Have to say</h1>
+                    <h1 class="text6">Read What Others Have to say</h1>
                 </div>
                 <div class="down">
                     <div class="card1">
                         <img class="ellipse" src="images/Ellipse 3.png" alt="">
                         <h3 class="text3">OLIVIA COLE</h3>
-                        <p class="content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet <br> &nbsp;&nbsp;&nbsp;&nbsp; adipisicing elit. Suscipit voluptates<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;praesentium deserunt iste atque,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            &nbsp;&nbsp;nam odio dolorem.</p>
+                        <p class="content">Lorem ipsum dolor sit amet adipisicing elit. Suscipit voluptates praesentium deserunt iste atque,nam odio dolorem.</p>
                     </div>
                     <div class="card2">
                         <img class="ellipse" src="images/Ellipse 4.png" alt="">
                         <h3 class="text3">EVEN WHITE</h3>
-                        <p class="content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet <br> &nbsp;&nbsp;&nbsp;&nbsp; adipisicing elit. Suscipit voluptates<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;praesentium deserunt iste atque,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            &nbsp;&nbsp;nam odio dolorem.</p>
+                        <p class="content">Lorem ipsum dolor sit amet adipisicing elit. Suscipit voluptates praesentium deserunt iste atque, nam odio dolorem.</p>
                     </div>
                     <div class="card3">
                         <img class="ellipse" src="images/Ellipse 5.png" alt="">
                         <h3 class="text3">JOHN MILLER</h3>
-                        <p class="content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet <br> &nbsp;&nbsp;&nbsp;&nbsp; adipisicing elit. Suscipit voluptates<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;praesentium deserunt iste atque,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            &nbsp;&nbsp;nam odio dolorem.</p>
+                        <p class="content">Lorem ipsum dolor sit amet
+                            <adipisicing elit. Suscipit voluptates praesentium deserunt iste atquenam odio dolorem.>
                     </div>
                 </div>
             </div>
@@ -126,7 +125,7 @@
             <div class="thing">
                 <div class="hero-thing">
                     <h3 class="text7">Are you ready?</h3>
-                    <h1 class="text8">Be a part of the <br>&nbsp;next big thing</h1>
+                    <h1 class="text8">Be a part of the next big thing</h1>
                     <button class="btn4">Get started</button>
                 </div>
             </div>
