--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
 
 <body>
     <div class="container">
-        <div class="navbar">
-            <div class="logo">KRYPTO</div>
-            <nav>
-                <ul>
-                    <li>About</li>
-                    <li>Pricing</li>
-                    <li>Contact</li>
-                    <button class="icon1">
-              <a class="btn" href="#"><span class="dot"></span>BY NFTS</a>
-            </button>
+        <nav class="header">
+            <div class="logo">
+                <span><strong>KRYPTO</strong></span>
+            </div>
+            <div class="links">
+                <ul class="nav-links">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">PRICING</a></li>
+                    <li><a href="#">CONTCAT</a></li>
+                    <li><button class="butn"> <span class="dot"></span>BUY NFTS
+                    </button></li>
+
+
                 </ul>
-            </nav>
-        </div>
+
+            </div>
+        </nav>
         <!-- nav bar end -->
         <div class="hero-section">
 
@@ -95,82 +99,85 @@
         </div>
 
         <!-- browse section end -->
-        <div class="testmonials">
-            <div class="testmonials-hero">
-                <div class="up">
-                    <h3 class="text5">Testimonials</h3>
-                    <h1 class="text6">Read What Others Have to say</h1>
-                </div>
-                <div class="down">
-                    <div class="card1">
-                        <img class="ellipse" src="images/Ellipse 3.png" alt="">
-                        <h3 class="text3">OLIVIA COLE</h3>
-                        <p class="content">Lorem ipsum dolor sit amet adipisicing elit. Suscipit voluptates praesentium deserunt iste atque,nam odio dolorem.</p>
-                    </div>
-                    <div class="card2">
-                        <img class="ellipse" src="images/Ellipse 4.png" alt="">
-                        <h3 class="text3">EVEN WHITE</h3>
-                        <p class="content">Lorem ipsum dolor sit amet adipisicing elit. Suscipit voluptates praesentium deserunt iste atque, nam odio dolorem.</p>
-                    </div>
-                    <div class="card3">
-                        <img class="ellipse" src="images/Ellipse 5.png" alt="">
-                        <h3 class="text3">JOHN MILLER</h3>
-                        <p class="content">Lorem ipsum dolor sit amet
-                            <adipisicing elit. Suscipit voluptates praesentium deserunt iste atquenam odio dolorem.>
-                    </div>
-                </div>
+
+        <div class="testmonials-hero">
+            <div class="up">
+                <h3 class="text5">Testimonials</h3>
+                <h1 class="text6">Read What Others Have to say</h1>
             </div>
-            <!-- 
- testimonials section end -->
-            <div class="thing">
-                <div class="hero-thing">
-                    <h3 class="text7">Are you ready?</h3>
-                    <h1 class="text8">Be a part of the next big thing</h1>
-                    <button class="btn4">Get started</button>
+
+            <div class="down">
+                <div class="card1">
+                    <img class="ellipse" src="images/Ellipse 3.png" alt="">
+                    <h3 class="text3">OLIVIA COLE</h3>
+                    <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada vel</p>
+                </div>
+                <div class="card1">
+                    <img class="ellipse" src="images/Ellipse 4.png" alt="">
+                    <h3 class="text3">EVEN WHITE</h3>
+                    <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada vel</p>
+                </div>
+                <div class="card1">
+                    <img class="ellipse" src="images/Ellipse 5.png" alt="">
+                    <h3 class="text3">JOHN MILLER</h3>
+                    <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada ve</p>
                 </div>
             </div>
-            <!-- thing section end -->
-            <footer>
-                <div class="footer">
-                    <div class="footer-content">
-                        <h3 class="text13">KRYPTO</h3>
-                    </div>
-                    <div class="footer-content">
-                        <h3 class="text9">Menu</h3>
-                        <ul class="list">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Buy NFTs</a></li>
-                            <li><a href="">Sell NFTs</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-content">
-                        <h3 class="text10">Market</h3>
-                        <ul class="list1">
-                            <li><a href="">Browse NFTs</a></li>
-                            <li><a href="">Buy NFTs</a></li>
-                            <li><a href="">Sell NFTs</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-content">
-                        <h3 class="text11">Contact</h3>
-                        <ul class="list2">
-                            <li><a href="">Email</a></li>
-                            <li><a href="">Linkdin</a></li>
-                            <li><a href="">Instagram</a></li>
-                            <li><a href="">Twitter</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-content">
-                        <h3 class="text12">Join our newsletter</h3>
-                        <div class="h3-border-box">
-                            <h3 class="h3-heading">Email Address</h3>
-                            <button class="border-btn">SUBMIT</button>
-                        </div>
-                    </div>
-            </footer>
+        </div>
+        <!-- testimonials section end -->
+
+        <div class="hero-thing">
+            <h3 class="text7">Are you ready?</h3>
+            <h1 class="text8">Be a part of the next big thing</h1>
+            <button class="btn4">Get started</button>
+        </div>
+
+        <!-- thing section end -->
+
+
+
+        <div class="footer">
+            <div class="footer-logo">
+                <span><strong>KRYPTO</strong></span>
             </div>
-            <script src="figma.js"></script>
+            <div class="footer-Menu">
+                <span class="span"><strong>Menu</strong></span>
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Buy NFTs</a></li>
+                    <li><a href="#">Sell NFTs</a></li>
+                </ul>
+            </div>
+            <div class="footer-Market">
+                <span class="span"><strong>Market</strong></span>
+                <ul class="market">
+                    <li><a href="#">Browse NFTs</a></li>
+                    <li><a href="#">Buy NFTs</a></li>
+                    <li><a href="#">Sell NFTs</a></li>
+                </ul>
+            </div>
+            <div class="footer-Content">
+
+                <span class="span"><strong>Contact</strong></span>
+                <ul class="contact">
+                    <li><a href="#">Email</a></li>
+                    <li><a href="#">Linkdin</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+            </div>
+            <div class="newsletter">
+                <h3>Join our newsletter</h3>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Email Address">
+                    <button type="submit">SUBMIT</button>
+                </form>
+            </div>
+        </div>
+        <!-- end of footer -->
+    </div>
+    <script src="figma.js"></script>
 </body>
 
 </html>
