--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <div class="logo">
                 <span><strong>KRYPTO</strong></span>
             </div>
+            <div class="navbar-toggle">
+                <!-- <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-xmark"></i> -->
+                <i class="fa-solid fa-bars toggle-icon"></i>
+
+
+            </div>
+
             <div class="links">
                 <ul class="nav-links">
                     <li><a href="#">HOME</a></li>
@@ -49,7 +57,7 @@
                         The most secure marketplace for buying and selling unique crypto assets.
                     </p>
                 </div>
-                <div class="links">
+                <div class="links-herosection">
                     <a class="link1" href="btn1">Buy NFts</a>
                     <a class="link2" href="btn2">Sell NFTs</a>
                 </div>
@@ -59,6 +67,8 @@
         <div class="feature">
             <h2>Featured ON</h2>
             <div class="feature-div">
+
+
                 <img src="images/image 6.png" alt="">
                 <img src="images/image 5.png" alt="">
 
@@ -66,118 +76,118 @@
 
                 <img src="images/image 8.png" alt="">
 
+
             </div>
-        </div>
-        <!-- features section end -->
+            <!-- features section end -->
 
 
-        <div class="hero-analytics">
-            <div class="left">
-                <img src="images/Other 18.png" alt="">
-            </div>
-            <div class="right">
-                <h3 class="text1">Analytics</h3>
-                <h1 class="text2">Built-In Analytics to track your nfts</h1>
-                <p class="p-analytics">use our built-in analytics dashboard to pull valueable insights and monitor the value of your Krypto portfolio over time</p>
-                <button class="btn3">View our pricing</button>
-            </div>
-        </div>
-
-        <!-- analytics end -->
-
-
-        <div class="browse-hero">
-            <div class="left">
-                <h3 class="text1">Get our app</h3>
-                <h1 class="browse-text">Browse NFTs From Your Samrtphone</h1>
-                <p class="p-browse">use our built-in analytics dashboard to pull valueable insights and monitor the value of your Krypto portfolio over time</p>
-                <button class="btn3">View our pricing</button>
-            </div>
-            <div class="right">
-                <img src="images/Other 17.png" alt="">
-            </div>
-        </div>
-
-        <!-- browse section end -->
-
-        <div class="testmonials-hero">
-            <div class="up">
-                <h3 class="text5">Testimonials</h3>
-                <h1 class="text6">Read What Others Have to say</h1>
-            </div>
-
-            <div class="down">
-                <div class="card1">
-                    <img class="ellipse" src="images/Ellipse 3.png" alt="">
-                    <h3 class="text3">OLIVIA COLE</h3>
-                    <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada vel</p>
+            <div class="hero-analytics">
+                <div class="left">
+                    <img src="images/Other 18.png" alt="">
                 </div>
-                <div class="card1">
-                    <img class="ellipse" src="images/Ellipse 4.png" alt="">
-                    <h3 class="text3">EVEN WHITE</h3>
-                    <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada vel</p>
-                </div>
-                <div class="card1">
-                    <img class="ellipse" src="images/Ellipse 5.png" alt="">
-                    <h3 class="text3">JOHN MILLER</h3>
-                    <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada ve</p>
+                <div class="right">
+                    <h3 class="text1">Analytics</h3>
+                    <h1 class="text2">Built-In Analytics to track your nfts</h1>
+                    <p class="p-analytics">use our built-in analytics dashboard to pull valueable insights and monitor the value of your Krypto portfolio over time</p>
+                    <button class="btn3">View our pricing</button>
                 </div>
             </div>
+
+            <!-- analytics end -->
+
+
+            <div class="browse-hero">
+                <div class="left">
+                    <h3 class="text1">Get our app</h3>
+                    <h1 class="browse-text">Browse NFTs From Your Samrtphone</h1>
+                    <p class="p-browse">use our built-in analytics dashboard to pull valueable insights and monitor the value of your Krypto portfolio over time</p>
+                    <button class="btn3">View our pricing</button>
+                </div>
+                <div class="right">
+                    <img src="images/Other 17.png" alt="">
+                </div>
+            </div>
+
+            <!-- browse section end -->
+
+            <div class="testmonials-hero">
+                <div class="up">
+                    <h3 class="text5">Testimonials</h3>
+                    <h1 class="text6">Read What Others Have to say</h1>
+                </div>
+
+                <div class="down">
+                    <div class="card1">
+                        <img class="ellipse" src="images/Ellipse 3.png" alt="">
+                        <h3 class="text3">OLIVIA COLE</h3>
+                        <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada vel</p>
+                    </div>
+                    <div class="card1">
+                        <img class="ellipse" src="images/Ellipse 4.png" alt="">
+                        <h3 class="text3">EVEN WHITE</h3>
+                        <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada vel</p>
+                    </div>
+                    <div class="card1">
+                        <img class="ellipse" src="images/Ellipse 5.png" alt="">
+                        <h3 class="text3">JOHN MILLER</h3>
+                        <p class="content">Lorem ipsum dolor sit amet, consectur adipisicing elit. Nucnc ullamcorper scelerisque mi, in malesuada felis malesuada ve</p>
+                    </div>
+                </div>
+            </div>
+            <!-- testimonials section end -->
+
+            <div class="hero-thing">
+                <h3 class="text7">Are you ready?</h3>
+                <h1 class="text8">Be a part of the next big thing</h1>
+                <button class="btn4">Get started</button>
+            </div>
+
+            <!-- thing section end -->
+
+
+
+            <div class="footer">
+                <div class="footer-logo">
+                    <span><strong>KRYPTO</strong></span>
+                </div>
+                <div class="footer-Menu">
+                    <span class="span"><strong>Menu</strong></span>
+                    <ul class="menu">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Buy NFTs</a></li>
+                        <li><a href="#">Sell NFTs</a></li>
+                    </ul>
+                </div>
+                <div class="footer-Market">
+                    <span class="span"><strong>Market</strong></span>
+                    <ul class="market">
+                        <li><a href="#">Browse NFTs</a></li>
+                        <li><a href="#">Buy NFTs</a></li>
+                        <li><a href="#">Sell NFTs</a></li>
+                    </ul>
+                </div>
+                <div class="footer-Content">
+
+                    <span class="span"><strong>Contact</strong></span>
+                    <ul class="contact">
+                        <li><a href="#">Email</a></li>
+                        <li><a href="#">Linkdin</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                </div>
+                <div class="newsletter">
+                    <h3>Join our newsletter</h3>
+                    <form class="newsletter-form">
+                        <input type="email" placeholder="Email Address">
+                        <button type="submit">SUBMIT</button>
+                    </form>
+                </div>
+            </div>
+            <!-- end of footer -->
         </div>
-        <!-- testimonials section end -->
-
-        <div class="hero-thing">
-            <h3 class="text7">Are you ready?</h3>
-            <h1 class="text8">Be a part of the next big thing</h1>
-            <button class="btn4">Get started</button>
-        </div>
-
-        <!-- thing section end -->
-
-
-
-        <div class="footer">
-            <div class="footer-logo">
-                <span><strong>KRYPTO</strong></span>
-            </div>
-            <div class="footer-Menu">
-                <span class="span"><strong>Menu</strong></span>
-                <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Buy NFTs</a></li>
-                    <li><a href="#">Sell NFTs</a></li>
-                </ul>
-            </div>
-            <div class="footer-Market">
-                <span class="span"><strong>Market</strong></span>
-                <ul class="market">
-                    <li><a href="#">Browse NFTs</a></li>
-                    <li><a href="#">Buy NFTs</a></li>
-                    <li><a href="#">Sell NFTs</a></li>
-                </ul>
-            </div>
-            <div class="footer-Content">
-
-                <span class="span"><strong>Contact</strong></span>
-                <ul class="contact">
-                    <li><a href="#">Email</a></li>
-                    <li><a href="#">Linkdin</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Twitter</a></li>
-                </ul>
-            </div>
-            <div class="newsletter">
-                <h3>Join our newsletter</h3>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Email Address">
-                    <button type="submit">SUBMIT</button>
-                </form>
-            </div>
-        </div>
-        <!-- end of footer -->
-    </div>
-    <script src="figma.js"></script>
+        <script src="figma.js"></script>
 </body>
 
 </html>
